--- a/NewsAPPTest/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/NewsAPPTest/Views/Storyboards/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tdd-lD-mvx">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -441,7 +442,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uk2-nw-WX8">
-                                                            <rect key="frame" x="8.6666666666666572" y="4.6666666666666714" width="110.66666666666669" height="110.66666666666667"/>
+                                                            <rect key="frame" x="8.6666666666666643" y="4.6666666666666714" width="110.66666666666669" height="110.66666666666667"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="uk2-nw-WX8" secondAttribute="height" id="3Fi-7e-yiG"/>
                                                             </constraints>
@@ -529,10 +530,10 @@
                                                 <rect key="frame" x="10" y="50" width="373" height="80"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S4q-LR-v6f">
-                                                        <rect key="frame" x="204.66666666666663" y="0.0" width="168.33333333333337" height="80"/>
+                                                        <rect key="frame" x="283" y="0.0" width="90" height="80"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Update" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SSx-Ub-GRD">
-                                                                <rect key="frame" x="34" y="10" width="100" height="20"/>
+                                                                <rect key="frame" x="-5" y="10" width="100" height="20"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="100" id="Yll-Mk-AQ5"/>
                                                                     <constraint firstAttribute="height" constant="20" id="w4z-Kn-6kB"/>
@@ -542,7 +543,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UpdateData" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9g9-RP-sFL">
-                                                                <rect key="frame" x="0.0" y="40" width="168.33333333333334" height="35"/>
+                                                                <rect key="frame" x="0.0" y="40" width="90" height="35"/>
                                                                 <color key="backgroundColor" red="0.1616763175" green="0.20854899290000001" blue="0.24895501140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="35" id="Z8c-rs-bD5"/>
@@ -562,10 +563,10 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nTS-jp-hl4">
-                                                        <rect key="frame" x="0.0" y="0.0" width="164.66666666666666" height="80"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="88" height="80"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Published" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ote-gG-ge9">
-                                                                <rect key="frame" x="32.333333333333343" y="10" width="100" height="20"/>
+                                                                <rect key="frame" x="-6" y="10" width="100" height="20"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="100" id="5qz-GR-BoG"/>
                                                                     <constraint firstAttribute="height" constant="20" id="mdP-0M-PsV"/>
@@ -575,7 +576,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PublishedDate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7mV-Id-ahe">
-                                                                <rect key="frame" x="0.0" y="40" width="164.66666666666666" height="35"/>
+                                                                <rect key="frame" x="0.0" y="40" width="88" height="35"/>
                                                                 <color key="backgroundColor" red="0.1616763175" green="0.20854899290000001" blue="0.24895501140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="35" id="WUT-Zf-mqF"/>
@@ -605,7 +606,7 @@
                                                     <constraint firstItem="S4q-LR-v6f" firstAttribute="top" secondItem="886-vT-dEF" secondAttribute="top" id="UhR-27-qNX"/>
                                                     <constraint firstItem="S4q-LR-v6f" firstAttribute="width" secondItem="nTS-jp-hl4" secondAttribute="width" multiplier="1.024" id="VJN-hU-una"/>
                                                     <constraint firstItem="nTS-jp-hl4" firstAttribute="leading" secondItem="886-vT-dEF" secondAttribute="leading" id="fc0-gP-BRI"/>
-                                                    <constraint firstItem="S4q-LR-v6f" firstAttribute="leading" secondItem="nTS-jp-hl4" secondAttribute="trailing" constant="40" id="voT-JN-0aT"/>
+                                                    <constraint firstItem="S4q-LR-v6f" firstAttribute="leading" secondItem="nTS-jp-hl4" secondAttribute="trailing" priority="250" constant="40" id="voT-JN-0aT"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
@@ -632,14 +633,14 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QaN-zK-9YH">
-                                                <rect key="frame" x="21.666666666666671" y="150" width="150" height="150"/>
+                                                <rect key="frame" x="21" y="150" width="150" height="150"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="150" id="7Lk-6e-o43"/>
                                                     <constraint firstAttribute="height" constant="150" id="eaa-y4-6yK"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By Line" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a8x-XC-Vgz">
-                                                <rect key="frame" x="181.66666666666663" y="150" width="201.33333333333337" height="150"/>
+                                                <rect key="frame" x="181" y="150" width="202" height="150"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -656,12 +657,12 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="QaN-zK-9YH" firstAttribute="leading" secondItem="0dC-VE-T8p" secondAttribute="leading" priority="750" constant="21" id="1bq-nm-rnk"/>
                                             <constraint firstItem="a8x-XC-Vgz" firstAttribute="height" secondItem="QaN-zK-9YH" secondAttribute="height" id="9TO-3X-Pfx"/>
                                             <constraint firstAttribute="trailing" secondItem="eZG-p0-SES" secondAttribute="trailing" constant="10" id="AAL-Dy-b7v"/>
                                             <constraint firstItem="THg-6W-9Nm" firstAttribute="leading" secondItem="0dC-VE-T8p" secondAttribute="leading" id="KVr-in-Hmp"/>
-                                            <constraint firstAttribute="trailing" secondItem="a8x-XC-Vgz" secondAttribute="trailing" constant="10" id="MIP-rN-m1b"/>
+                                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="a8x-XC-Vgz" secondAttribute="trailing" constant="10" id="MIP-rN-m1b"/>
                                             <constraint firstItem="a8x-XC-Vgz" firstAttribute="top" secondItem="THg-6W-9Nm" secondAttribute="bottom" id="R4N-f0-HU3"/>
-                                            <constraint firstItem="QaN-zK-9YH" firstAttribute="centerX" secondItem="0dC-VE-T8p" secondAttribute="centerX" constant="-100" id="S6A-sU-jFH"/>
                                             <constraint firstItem="eZG-p0-SES" firstAttribute="leading" secondItem="0dC-VE-T8p" secondAttribute="leading" constant="10" id="TCr-eT-Bap"/>
                                             <constraint firstItem="eZG-p0-SES" firstAttribute="top" secondItem="QaN-zK-9YH" secondAttribute="bottom" constant="20" id="a8G-XY-0DI"/>
                                             <constraint firstItem="a8x-XC-Vgz" firstAttribute="leading" secondItem="QaN-zK-9YH" secondAttribute="trailing" constant="10" id="b3f-7H-nIJ"/>
